fix since url browser text overlaps

--- a/custom_theme/css/style.css
+++ b/custom_theme/css/style.css
@@ -376,7 +376,7 @@ p.credits {
 }
 div.credits-container {
   margin: auto;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   margin-top: 1em;
   align-self: flex-end;
   order: 10; /* should always be at bottom */
